--- a/templates/successful_purchase.html
+++ b/templates/successful_purchase.html
@@ -7,13 +7,17 @@
     <link rel="stylesheet" href="../static/styles/successful_purchase.css">
 </head>
 <body>
-    <div class="container">
-        <h1 class="logo"><img class="build" src="../static/icons/build.svg" alt="">АвтоДельта</h1>
-        
-        <h5>Заказ успешно оформлен.</h5>
-        <button>Вернуться</button>
-        
-       
+    <div>
+        <div class="container">
+            <h1 class="logo"><img class="build" src="../static/icons/build.svg" alt="">АвтоДельта</h1>
+            
+            <h5>Заказ успешно оформлен.</h5>
+            <button onclick="window.location.href='/'">Вернуться</button> 
+        </div>
+        <div>
+            <h6>Если у вас есть вопросы, мы всегда рады помочь.<br>Свяжитесь с нами +7 (850) 589-48-43</h6>
+        </div>
     </div>
+
 </body>
 </html>
