--- a/static/styles/empty_shopping_cart.css
+++ b/static/styles/empty_shopping_cart.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, sans-serif;
+
 }
 
 body {
@@ -10,8 +11,10 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    padding-top: 130px;
+    margin-top: 30px;
+    color: #333;
 }
+
 
 /* Общая фиксированная шапка */
 .header {
@@ -157,8 +160,6 @@ body {
     padding: 10px 0;
     background: rgb(208, 208, 208);
     position: absolute;
-    display: flex;
-    justify-content: flex-start;
     width: 100%;
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
 }
@@ -192,70 +193,52 @@ body {
     color: rgb(255, 255, 255);
 }
 
-
-/* Главный баннер с фоном */
-.hero {
-    background-image: url(/static/images/основа.jpg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    padding: 150px 20px;
+/*Основной контент - пустая корзина*/
+.container {
+    padding: 150px 50px;
     position: relative;
     min-height: 500px;
-    display: flex;
-    align-items: center;
-    overflow: hidden;
-}
+    padding-bottom: 80px;
+} 
 
-/* Основной контент */
-.content {
-    flex: 1;
-    padding: 60px 20px;
-}
-.section {
-    margin: 0 auto 50px;
-    padding: 0 20px;
-}
 
-.section-title {
-    font-size: 32px;
+.cart-title {
     text-align: center;
-    margin-bottom: 40px;
-    color: #dc5d5d;
-}
-
-.products-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 30px;
-    margin-bottom: 50px;
-}
-
-.product-card {
-    background: white;
-    padding: 25px;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-    text-align: center;
-}
-
-.product-card h3 {
-    margin-bottom: 15px;
+    margin-bottom: 30px;
     color: #000000;
 }
 
-.about {
+.cart-container {
     background: white;
-    padding: 50px;
-    border-radius: 8px;
+    border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-    margin: 0 20px;
+    padding: 20px;
 }
 
-.about p {
-    line-height: 1.6;
+.empty-cart {
+    text-align: center;
+    padding: 50px 20px;
+    color: #7f8c8d;
+}
+
+.empty-cart-icon {
+    font-size: 48px;
     margin-bottom: 20px;
-    color: #666;
+    color: #bdc3c7;
+}
+
+.continue-shopping {
+    background-color: #e74c3c;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 20px;
+}
+
+.continue-shopping:hover {
+    background-color: #c0392b;
 }
 
 /* Футер */
@@ -295,7 +278,3 @@ body {
     display: block;
     line-height: 1.5;
 }
-
-
-
-
