--- a/static/styles/login.css
+++ b/static/styles/login.css
@@ -11,6 +11,7 @@ body {
     padding: 30px;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    margin-bottom: 1px;
 }
 
 .logo {
@@ -40,6 +41,13 @@ h3 {
     text-align: center;
     margin-bottom: 30px;
     color: #333;
+}
+
+h6 {
+    color: #000000;
+    text-align: center;
+    font-weight: lighter;
+
 }
 
 input {
