--- a/static/styles/successful_purchase.css
+++ b/static/styles/successful_purchase.css
@@ -8,11 +8,12 @@ body {
 }
 .container {
     max-width: 400px;
-    margin: 50px auto;
+    margin: 100px auto;
     background: white;
-    padding: 30px;
+    padding: 70px;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    margin-bottom: 1px;
 }
 
 .logo {
@@ -42,6 +43,14 @@ h5 {
     text-align: center;
     margin-bottom: 30px;
     color: #7f7d7d;
+    font-weight: lighter;
+}
+
+h6 {
+    color: #000000;
+    text-align: center;
+    font-weight: lighter;
+
 }
 button {
     width: 100%;
