--- a/templates/profile.html
+++ b/templates/profile.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="contacts" style="float: left;">
                     <img class="header-icons" src="../static/icons/location_on.svg"/>
-                    <span>info@auto-delta.com</span>
+                    <span>г. Кострома, ул. Евгения Ермакова, 3, корп.2</span>
                 </div>
             </div>
         </div>
@@ -44,7 +44,7 @@
                         <a href="/profile" class="person-icon">
                             <img src="../static/icons/person.png" alt="Профиль">
                         </a>
-                        <a href="/logout" class="logout-btn">Выйти</a>
+                       
                     {% else %}
                         <a href="/login" class="person-icon">
                             <img src="../static/icons/person.png" alt="Войти">
@@ -81,9 +81,9 @@
             </div>
             
             <ul class="user-menu">
-                <li><a href="#" class="active">Личные данные</a></li>
-                <li><a href="#">Мои заказы</a></li>
-                <li><a href="#" onclick="logout()">Выйти</a></li>
+                <li><a href="/profile" class="active">Личные данные</a></li>
+                <li><a href="/order">Мои заказы</a></li>
+                <li><a href="/logout">Выйти</a></li>
             </ul>
         </aside>
 
@@ -136,8 +136,8 @@
             <div class="footer-section">
                 <h3>Предметы</h3>
                 <a href="/catalog">Каталог</a>
-                <a href="#">Поставщикам</a>
-                <a href="#">Партнёрам</a>
+                <a href="/suppliers">Поставщикам</a>  
+                <a href="/partners">Партнёрам</a>     
             </div>
             <div class="footer-section">
                 <h3>Контакты</h3>
